public/css/style.css
/* ... */
.btn:hover {
  -webkit-transform: scale(1.05);
  transform: scale(1.05);
}

.hidden {
  display: none !important;
}
/******** PRELOADER *********/

.preloader {
  background-color: #222222;
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  z-index: 150;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  align-items: center;
  justify-content: center;
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
}
.preloader.opacity-0 {
  opacity: 0;
}

.preloader .loader {
  height: 40px;
  width: 40px;
  border: 4px solid #e3e3e3;
  border-radius: 50%;
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/******** ASIDE *********/
.aside {
  width: 270px;
  background-color: #fdf9ff;
  position: fixed;
  height: 100%;
  left: 0;
  top: 0;
  z-index: 10;
  border-right: 1px solid #e8dfec;
  padding: 30px;
  overflow-y: auto;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.aside .logo {
  padding: 30px 0;
}

.aside .logo a {
  font-size: 27px;
  color: #302e4d;
  font-family: 'Rubik', sans-serif;
  font-weight: 800;
  text-decoration: none;
  text-transform: uppercase;
  display: inline-block;
  position: relative;
  padding: 0 10px;
  line-height: 40px;
}

.aside .logo a::before {
  content: '';
  height: 20px;
  width: 40px;
  position: absolute;
  top: 0;
  left: 0;
}

.aside .logo a::after {
  content: '';
  height: 20px;
  width: 40px;
  position: absolute;
  bottom: 0;
  right: 0;
}

.aside .nav-toggler {
  height: 40px;
  width: 45px;
  border: 1px solid #d4d4e3;
  cursor: pointer;
  position: fixed;
  left: 300px;
  top: 20px;
  z-index: 11;
  border-radius: 5px;
  background-color: #fdf9ff;
  /*display: -ms-flexbox;
  display: flex; */
  display: none;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.aside .nav-toggler.open span {
  background-color: transparent;
}
.aside .nav-toggler span {
  height: 2px;
  width: 18px;
  display: inline-block;
  position: relative;
}

.aside .nav-toggler span::before {
  content: '';
  height: 2px;
  width: 18px;
  position: absolute;
  top: -6px;
  left: 0;
}

.aside .nav-toggler.open span::before {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 0px;
}

.aside .nav-toggler span::after {
  content: '';
  height: 2px;
  width: 18px;
  position: absolute;
  top: 6px;
  left: 0;
}

.aside .nav-toggler.open span::after {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  top: 0px;
}

.aside .nav {
  list-style: none;
  margin: 80px 0;
  padding: 0;
}

.aside .nav li {
  display: block;
}

.aside .nav li a {
  font-size: 16px;
  font-weight: 600;
  color: #302e4d;
  text-decoration: none;
  line-height: 45px;
  display: block;
  border-bottom: 1px solid #e8dfec;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  text-transform: capitalize;
}

.aside .nav li a:not(.active):hover {
  padding-left: 5px;
}
.aside .nav li a .fa {
  margin-right: 5px;
}

.aside .copyright-text {
  font-size: 13px;
  color: #7d7d7d;
}
/******** HOME *********/

.home {
  min-height: 100vh;
  display: -ms-flexbox;
  display: flex;
  background-image: url(/public/images/home.gif);
  background-position: center;
  background-size: cover;
}

.home .intro {
  text-align: center;
}

.home .intro img {
  height: 220px;
  width: 220px;
  border-radius: 50%;
  display: inline-block;
  border: 8px solid #ffffff;
  background-color: #fff;
}

.home .intro h1 {
  font-size: 30px;
  color: #302e4d;
  font-family: 'Rubik', sans-serif;
  font-weight: 700;
  margin: 20px 0 5px;
}

.home .intro p {
  font-size: 16px;
  font-weight: 500;
  margin: 0;
  line-height: 22px;
  color: #504e70;
}

.home .intro .social-links {
  margin-top: 10px;
}

.home .intro .social-links a {
  height: 35px;
  width: 35px;
  display: inline-block;
  text-align: center;
  line-height: 35px;
  color: #ffffff;
  margin: 0 4px;
  border-radius: 50%;
  text-decoration: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.home .intro .social-links a:hover {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

/******** ABOUT *********/

.about .about-content {
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.about .about-content .about-text {
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.about .about-content .about-text h3 {
  font-size: 24px;
  margin-bottom: 15px;
  font-weight: 700;
  color: #302e4d;
}
.about .about-content .about-text p {
  font-size: 16px;
  line-height: 25px;
  color: #504e70;
  margin: 0;
  margin-bottom: -25px;
}

.about .about-content .personal-info {
  /* background-color: red; */
  -ms-flex: 0 0 40%;
  flex: 0 0 60%;
  max-width: 60%;
  margin-top: 50px;
}

.about .about-content .personal-info .info-item {
  -ms-flex: 0 0 5%;
  flex: 0 0 50%;
  max-width: 60%;
}

.about .about-content .personal-info .info-item p {
  /* background-color: red; */
  font-weight: 600;
  padding: 10px 0;
  font-size: 16px;
  color: #302e4d;
  margin: 0;
  border-bottom: 1px solid #e8dfec;
  margin-top: 5px;
}

.about .about-content .personal-info .info-item p span {
  font-weight: 400;
  color: #504e70;
  margin-left: 4px;
  display: inline-block;
}

.about .about-content .personal-info .buttons {
  margin-top: 20px;
}
/* ... */

